--- a/index.html
+++ b/index.html
@@ -1281,8 +1281,8 @@
             <p class="section-subtitle">Whether you're hiring, looking for a creative partner, or just want to talk social strategy, I'd love to hear from you.</p>
         </div>
         <div class="contact-methods">
-            <a href="mailto:nikki.hill.johnson@gmail.com" class="contact-pill">
-                ✉️ nikki.hill.johnson@gmail.com
+            <a href="/cdn-cgi/l/email-protection#77191e1c1c1e591f1e1b1b591d181f1904181937101a161e1b5914181a" class="contact-pill">
+                ✉️ <span class="__cf_email__" data-cfemail="2a4443414143044243464604404542445945446a4d474b434604494547">[email&#160;protected]</span>
             </a>
             <a href="https://linkedin.com/in/nikkihilljohnson" target="_blank" class="contact-pill">
                 &#128279; LinkedIn
@@ -1291,7 +1291,7 @@
                 &#128222; 703-328-2000
             </a>
         </div>
-        <a href="mailto:nikki.hill.johnson@gmail.com" class="btn btn-white">Start a Conversation</a>
+        <a href="/cdn-cgi/l/email-protection#3a5453515153145253565614505552544955547a5d575b535614595557" class="btn btn-white">Start a Conversation</a>
     </div>
 </section>
 
@@ -1300,7 +1300,7 @@
     <p>&copy; 2026 Nikki Johnson</p>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     // Scroll-triggered animations
     const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
@@ -1352,14 +1352,4 @@
 
     // Smooth scroll for nav links
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function(e) {
-            e.preventDefault();
-            const target = document.querySelector(this.getAttribute('href'));
-            if (target) {
-                target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-            }
-        });
-    });
-</script>
-</body>
-</html>
+        anchor.add
