--- a/index.html
+++ b/index.html
@@ -1237,27 +1237,27 @@
                     <div class="testimonial-slide">
                         <div class="quote-mark">"</div>
                         <blockquote>I've been recommending Nikki to other businesses because her content is sharp and instantly elevates how professional our social media looks.</blockquote>
-                        <p class="testimonial-author">Garrett, StoneSmith Countertops</p>
+                        <p class="testimonial-author">Garrett, CEO, StoneSmith Countertops</p>
                     </div>
                     <div class="testimonial-slide">
                         <div class="quote-mark">"</div>
                         <blockquote>Nikki has a rare ability to make even complex products relatable while staying grounded in data. She built campaigns that didn't just look good. They performed. She consistently connected creative storytelling to real business outcomes.</blockquote>
-                        <p class="testimonial-author">Kevin, Product Manager, HVAC.com (Trane Technologies)</p>
+                        <p class="testimonial-author">Kevin, Senior Product Manager, HVAC.com (Trane Technologies)</p>
                     </div>
                     <div class="testimonial-slide">
                         <div class="quote-mark">"</div>
                         <blockquote>Nikki can take an undefined space and turn it into something cohesive, engaging, and scalable. She combines strong creative instincts with real audience insight, and she brings an energy that makes collaboration genuinely enjoyable.</blockquote>
-                        <p class="testimonial-author">Lee, Creative Strategist</p>
+                        <p class="testimonial-author">Lee, Head Creative Strategist, SAUHS STUDIOS</p>
                     </div>
                     <div class="testimonial-slide">
                         <div class="quote-mark">"</div>
                         <blockquote>Nikki consistently drove results across both paid and organic social while staying organized, creative, and proactive. Even with limited resources, she found fresh ways to connect with audiences and move the business forward.</blockquote>
-                        <p class="testimonial-author">Shelby Geyer, Marketing Leader</p>
+                        <p class="testimonial-author">Shelby, Senior Marketing Manager, Oxbox</p>
                     </div>
                     <div class="testimonial-slide">
                         <div class="quote-mark">"</div>
                         <blockquote>Nikki blends creative intuition with analytical precision. She understands how social strategy connects to the full funnel and consistently turns ad budgets into measurable results.</blockquote>
-                        <p class="testimonial-author">Jonathan Poston, Growth Leader</p>
+                        <p class="testimonial-author">Jonathan, Head of Growth, Thel Strategy</p>
                     </div>
                 </div>
             </div>
