--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 
         :root {
     --pink: #fe00ae;
+    --pink-rgb: 254, 0, 174;
     --lime: #c1fe1a;
+    --lime-rgb: 193, 254, 26;
     --purple: #7B00C7;
+    --purple-rgb: 123, 0, 199;
     --purple-light: #fdf0ff;
     --dark: #0d0d1a;
-            --gray-900: #2d2d3f;
-            --gray-600: #6b6b80;
-            --gray-300: #d1d1dd;
-            --gray-100: #f5f5f8;
-            --white: #ffffff;
-            --font-body: 'DM Sans', sans-serif;
-            --font-display: 'Playfair Display', serif;
-        }
+    --gray-900: #2d2d3f;
+    --gray-600: #6b6b80;
+    --gray-300: #d1d1dd;
+    --gray-100: #f5f5f8;
+    --white: #ffffff;
+    --font-body: 'DM Sans', sans-serif;
+    --font-display: 'Playfair Display', serif;
+}
 
         html { scroll-behavior: smooth; }
 
@@ -143,8 +146,8 @@
             width: 600px;
             height: 600px;
             border-radius: 50%;
-            background: radial-gradient(circle, rgba(232,54,143,0.06) 0%, transparent 70%);
-        }
+            background: radial-gradient(circle, rgba(var(--pink-rgb), 0.06) 0%, transparent 70%);
+}
         .hero-inner {
             max-width: 1200px;
             margin: 0 auto;
@@ -193,12 +196,12 @@
         .btn-primary {
             background: var(--pink);
             color: var(--white);
-            box-shadow: 0 4px 14px rgba(232,54,143,0.3);
+            box-shadow: 0 4px 14px rgba(var(--pink-rgb), 0.3);
         }
         .btn-primary:hover {
             background: #d42d7e;
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(232,54,143,0.35);
+            box-shadow: 0 6px 20px rgba(var(--pink-rgb), 0.35);
         }
         .btn-secondary {
             background: transparent;
@@ -223,7 +226,7 @@
             background: linear-gradient(135deg, var(--pink), var(--purple));
             padding: 5px;
             position: relative;
-            box-shadow: 0 20px 60px rgba(123,94,167,0.2);
+            box-shadow: 0 20px 60px rgba(var(--purple-rgb), 0.2);
         }
         .photo-frame-inner {
             width: 100%;
@@ -302,7 +305,7 @@
             font-family: var(--font-display);
             font-size: 2.75rem;
             font-weight: 700;
-            background: linear-gradient(135deg, var(--pink), var(--orange));
+            background: linear-gradient(135deg, var(--pink), var(--lime));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -380,7 +383,7 @@
             top: 0;
             bottom: 0;
             width: 2px;
-            background: linear-gradient(to bottom, var(--pink), var(--purple), var(--orange));
+            background: linear-gradient(to bottom, var(--pink), var(--purple), var(--lime));
         }
         .timeline-item {
             position: relative;
@@ -399,7 +402,7 @@
             z-index: 1;
         }
         .timeline-item:nth-child(2) .timeline-dot { border-color: var(--purple); }
-        .timeline-item:nth-child(3) .timeline-dot { border-color: var(--orange); }
+        .timeline-item:nth-child(3) .timeline-dot { border-color: var(--lime); }
         .timeline-item:nth-child(4) .timeline-dot { border-color: var(--pink); }
         .timeline-item:nth-child(5) .timeline-dot { border-color: var(--purple); }
         .timeline-card {
@@ -456,7 +459,7 @@
             align-items: center;
             gap: 0.35rem;
             padding: 0.35rem 0.75rem;
-            background: linear-gradient(135deg, rgba(232,54,143,0.08), rgba(123,94,167,0.08));
+            background: linear-gradient(135deg, rgba(var(--pink-rgb), 0.08), rgba(var(--purple-rgb), 0.08));
             border-radius: 50px;
             font-size: 0.78rem;
             font-weight: 600;
@@ -486,8 +489,8 @@
             height: 8px;
         }
         .case-banner-pink { background: linear-gradient(90deg, var(--pink), var(--purple)); }
-        .case-banner-purple { background: linear-gradient(90deg, var(--purple), var(--orange)); }
-        .case-banner-orange { background: linear-gradient(90deg, var(--orange), var(--pink)); }
+        .case-banner-purple { background: linear-gradient(90deg, var(--purple), var(--lime)); }
+.case-banner-orange { background: linear-gradient(90deg, var(--lime), var(--pink)); }
         .case-content {
             padding: 2rem;
         }
@@ -530,7 +533,7 @@
 
         /* ---- SERVICES / WHAT I DO ---- */
         .services { background: var(--dark); color: var(--white); }
-        .services .section-label { color: var(--orange); }
+        .services .section-label { color: var(--lime); }
         .services .section-title { color: var(--white); }
         .services .section-subtitle { color: rgba(255,255,255,0.6); }
         .services-grid {
@@ -547,7 +550,7 @@
         }
         .service-card:hover {
             background: rgba(255,255,255,0.1);
-            border-color: rgba(232,54,143,0.3);
+            border-color: rgba(var(--pink-rgb), 0.3);
             transform: translateY(-2px);
         }
         .service-icon {
@@ -560,9 +563,9 @@
             font-size: 1.5rem;
             margin-bottom: 1rem;
         }
-        .si-pink { background: rgba(232,54,143,0.15); }
-        .si-purple { background: rgba(123,94,167,0.2); }
-        .si-orange { background: rgba(242,118,73,0.15); }
+       .si-pink { background: rgba(var(--pink-rgb), 0.15); }
+.si-purple { background: rgba(var(--purple-rgb), 0.2); }
+.si-orange { background: rgba(var(--lime-rgb), 0.20); }
         .service-card h3 {
             font-size: 1.05rem;
             margin-bottom: 0.5rem;
@@ -736,7 +739,7 @@
         .toggle-btn:hover {
             border-color: var(--purple);
             color: var(--purple);
-            background: rgba(123,94,167,0.04);
+            background: rgba(var(--purple-rgb), 0.04);
         }
         .toggle-btn .chevron {
             transition: transform 0.3s;
@@ -798,7 +801,7 @@
         }
         .earlier-career-narrative {
             padding: 1.5rem 1.75rem 1.25rem;
-            background: linear-gradient(135deg, rgba(123,94,167,0.06), rgba(232,54,143,0.04));
+            background: linear-gradient(135deg, rgba(var(--purple-rgb), 0.06), rgba(var(--pink-rgb), 0.04));
             border-radius: 14px;
             border-left: 4px solid var(--purple);
         }
