--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
         <div class="hero-text">
             <h1>Hi, I'm <span class="accent">Nikki</span> Johnson</h1>
             <p class="hero-tagline">Senior Social Media &amp; Paid Media Strategist</p>
-            <p>I help brands grow revenue with social and paid strategies designed for humans first, algorithms second. For 15+ years, I've translated audience insight into campaigns people actually care about. They perform, they convert, and occasionally they make someone laugh. Fluent in meme. Also fluent in the metrics that prove it worked.</p>
+            <p>I help brands grow revenue with social and paid strategies designed for humans first and algorithms second. For 15+ years, I've translated audience insight into campaigns people actually care about. They perform, they convert, and occasionally they make someone laugh. Fluent in meme. Also fluent in the metrics that prove it worked.</p>
             <div class="hero-ctas">
                 <a href="#work" class="btn btn-primary">See My Work</a>
                 <a href="#contact" class="btn btn-secondary">Let's Talk</a>
